--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+fuel-crypto = "0.6.2"
 fuel-gql-client = "0.13.2"
+fuels-signers = "0.29.0"
 lazy_static = "1.4.0"
 poem = "1.3.48"
 serde = "1.0.147"
