--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 fuel-crypto = "0.6.2"
 fuel-gql-client = "0.13.2"
 fuels-signers = "0.29.0"
+fuels-types = "0.29.0"
 lazy_static = "1.4.0"
 poem = "1.3.48"
 serde = "1.0.147"
