--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,7 @@ fuel-gql-client = "0.13.2"
 fuels = "0.29.0"
 fuels-signers = "0.29.0"
 fuels-types = "0.29.0"
+futures = "0.3.25"
 lazy_static = "1.4.0"
 poem = "1.3.48"
 serde = "1.0.147"
