--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.7.1",
+    "@mantine/form": "^5.7.1",
+    "@mantine/hooks": "^5.7.1",
+    "@mantine/notifications": "^5.7.1",
+    "@tabler/icons": "^1.110.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
